--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server",
-    "testDB": "nodemon server/database/reviews/index.js"
+    "loadReviewPhoto": "nodemon server/database/reviews/loadReviewPhoto.js"
   },
   "repository": {
     "type": "git",
@@ -20,10 +20,13 @@
   "homepage": "https://github.com/front-end-kings/kings-clothing-api#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
     "pg": "^8.6.0",
+    "pg-copy-streams": "^5.1.1",
+    "pg-promise": "^10.10.2",
     "postgres": "^1.0.2"
   }
 }
